tests/compile_fail/ktstr_test_non_ident_path.rs
use ktstr::ktstr_test;

#[ktstr_test(self::nested = 1)]
fn bad(_ctx: &ktstr::scenario::Ctx) -> anyhow::Result<ktstr::assert::AssertResult> {
    Ok(ktstr::assert::AssertResult::pass())
}

fn main() {}
