tests/compile_fail/ktstr_test_non_ident_path.stderr
error: expected identifier
 --> tests/compile_fail/ktstr_test_non_ident_path.rs:3:14
  |
3 | #[ktstr_test(self::nested = 1)]
  |              ^^^^^^^^^^^^
